--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -1,11 +1,30 @@
-/* gmaps.module.css */
 
-
-
-  .aboutText{
+  .aboutTitle{
     text-align: center;
-    margin-top: 50px; 
+    margin-top: 200px; 
     margin-bottom: 50px;
     margin-left: 80px;
     margin-right: 80px;
+    font-size:40px;
+    font-weight: bold;
+  }
+
+  .title2{
+    text-align: center;
+    margin-top: 40px; 
+    margin-bottom: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
+    font-size:40px;
+    font-weight: bold;
+  }
+
+  .aboutText{
+    margin-top: 30px; 
+    margin-bottom: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
+    font-size:25px;
+    text-align: justify;
+
   }
