--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,3 @@
-/* page.module.css */
 
 .main {
   display: flex;
@@ -12,7 +11,7 @@
 .imageContainer {
   position: relative;
   width: 700px;
-  height: 700px; /* Set a specific height for the image container */
+  height: 700px; 
 }
 
 
@@ -23,11 +22,7 @@
   justify-content: center;
   margin-left: 30px;
   margin-right: 30px;
-  
-  /* background: rgba(37, 181, 241, 0.1); */
 }
-
-/* Add any other styles you need for your content */
 
 .carouselSt{
   display: block;
@@ -35,8 +30,6 @@
   object-fit: cover;
   
 }
-
-/* styles/Home.module.css */
 
 .container {
   max-width: 1500px;
