--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -1,12 +1,20 @@
 
   .aboutTitle{
     text-align: center;
-    margin-top: 200px; 
-    margin-bottom: 50px;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-top: 120px; 
+    margin-left: 0px;
+    margin-right:0px;
     font-size:40px;
     font-weight: bold;
+    display: flex;
+    background-color: rgb(247, 247, 247);
+    padding-bottom: 60px;
+    padding-top: 60px;
+    padding-left: 20px;
+  }
+
+  .image {  
+    border-radius: 5px; 
   }
 
   .title2{
