--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -4,8 +4,7 @@
     margin-top: 120px; 
     margin-left: 0px;
     margin-right:0px;
-    font-size:40px;
-    font-weight: bold;
+    font-size:28px;    
     display: flex;
     background-color: rgb(247, 247, 247);
     padding-bottom: 60px;
@@ -23,8 +22,12 @@
     margin-bottom: 50px;
     margin-left: 80px;
     margin-right: 80px;
-    font-size:40px;
+    font-size:30px;
     font-weight: bold;
+  }
+
+  .colorTitle{
+    color: #990000; 
   }
 
   .aboutText{
@@ -32,7 +35,8 @@
     margin-bottom: 50px;
     margin-left: 80px;
     margin-right: 80px;
-    font-size:25px;
+    font-size:22px;
     text-align: justify;
+    font-weight: lighter;
 
   }
