--- a/Styles/contact.module.css
+++ b/Styles/contact.module.css
@@ -4,11 +4,12 @@
   max-width: 600px;
   margin: 0 auto; 
   padding: 30px;
-  background-color: #f4f4f4;
+  background-color:rgb(247, 247, 247);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  margin-top: 80px;
+  margin-top: 190px;
+  margin-bottom: 90px;
  
 }
 
