--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -18,11 +18,11 @@
 
   .title2{
     text-align: center;
-    margin-top: 40px; 
+    margin-top: 70px; 
     margin-bottom: 50px;
     margin-left: 80px;
     margin-right: 80px;
-    font-size:30px;
+    font-size:40px;
     font-weight: bold;
   }
 
@@ -32,11 +32,27 @@
 
   .aboutText{
     margin-top: 30px; 
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     margin-left: 80px;
     margin-right: 80px;
     font-size:22px;
     text-align: justify;
     font-weight: lighter;
 
+  }
+
+
+  .pdfContainer {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    margin-top: 20px; 
+    padding-bottom: 70px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  
+  .pdfContainer a {
+    text-decoration: none;
+    margin:3px; /* Ajusta el margen entre los enlaces según sea necesario */
   }
