cambios en componente services

--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -54,5 +54,5 @@
   
   .pdfContainer a {
     text-decoration: none;
-    margin:3px; /* Ajusta el margen entre los enlaces según sea necesario */
+    margin:3px; 
   }
