mejoras en el codigo

--- a/Styles/card.module.css
+++ b/Styles/card.module.css
@@ -40,3 +40,10 @@
     margin: 0;
   }
   
+
+  @media (max-width: 767px) {
+    .card {
+        width: 100%; /* Ancho completo en dispositivos móviles */
+        margin: 10px 0; /* Márgenes más pequeños */
+    }
+}
