--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -37,8 +37,8 @@
     margin-right: 80px;
     font-size:22px;
     text-align: justify;
-    font-weight: lighter;
     line-height: 1.5;
+    color: black;
 
   }
 
