--- a/Styles/contact.module.css
+++ b/Styles/contact.module.css
@@ -15,13 +15,13 @@
   box-sizing: border-box;
   color: rgb(13, 37, 54);
   display:flex;
-  height: 55px;
+  height: 35px;
   font-size: 1.4em;
   font-weight: 600;
   padding: 4px;
   position: relative;
   text-decoration: none;
-  width: 14em;
+  width: 8em;
   border: 2px solid rgb(13, 37, 54);
   align-items: center;
 }
@@ -33,8 +33,8 @@
 
 .title{
   text-align: center;
-  margin-bottom: 70px;
-  font-size:70px;
+  margin-bottom: 50px;
+  font-size:55px;
   font-weight: bold;
 }
 
@@ -63,6 +63,7 @@
   margin-left: 45px;
   font-size: medium;
   font-weight: lighter;
+  color: black;
 }
 
 .bn39 .bn39span {
@@ -85,12 +86,13 @@
   font-size: medium;
   font-weight: lighter;
   text-decoration: none;
+  color: black;
 }
 
 .btnSection{
   margin-top: 50px;
   text-align: justify;  
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   line-height: 1.5;
 }
 
