--- a/Styles/contact.module.css
+++ b/Styles/contact.module.css
@@ -2,7 +2,7 @@
 .twoColumnsContainer {
   display: flex;
   padding: 20px;
-  margin-top: 180px;
+  margin-top: 135px;
   margin-bottom: 40px;
 }
 
@@ -56,14 +56,13 @@
   align-items: flex-start;  
   margin-left: 20px;
   color: black;
-
 }
 
 .iconBoxTitle2{
   margin-left: 45px;
   font-size: medium;
-  font-weight: lighter;
   color: black;
+  font-weight: 500;
 }
 
 .bn39 .bn39span {
@@ -84,8 +83,7 @@
 .iconBoxTitle{
   margin-left: 30px;
   font-size: medium;
-  font-weight: lighter;
-  text-decoration: none;
+  font-weight: 500;
   color: black;
 }
 
