--- a/Styles/carousel.module.css
+++ b/Styles/carousel.module.css
@@ -19,7 +19,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff; 
-  font-size: 150px; 
+  font-size: 140px; 
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
@@ -63,3 +63,10 @@
   z-index: 1; 
 }
 
+@media only screen and (max-width: 1200px) {
+
+  .descriptionOverlay {
+    font-size:110px;  ;
+  }
+
+}
