--- a/Styles/objectives.module.css
+++ b/Styles/objectives.module.css
@@ -105,3 +105,58 @@
     transform: scale(1); /* Vuelve a la escala original al final de la animación */
   }
 }
+
+
+@media only screen and (max-width: 992px) {
+
+  .twoColumnsContainer {
+    display: flex;
+    background-color: rgb(247, 247, 247);
+  
+  }
+
+  .image {
+    margin-top: 20px;
+  }
+  
+  .text {
+    font-size:18px;
+    text-align: justify;
+    margin-right: 30px;
+    margin-bottom: 40px;
+    line-height: 1.5;
+  }
+  
+  .title{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size:35px;
+    font-weight: bold;
+  }
+  
+  .title2{
+    color: #990000; 
+    text-align: center;
+    margin-bottom: 40px;
+    font-size:35px;
+  
+  }
+
+  .bn39 {
+    background-color:transparent;
+    box-sizing: border-box;
+    color: rgb(13, 37, 54);
+    display: block;
+    height: 35px;
+    font-size: 1.0em;
+    font-weight: 600;
+    padding: 4px;
+    position: relative;
+    text-decoration: none;
+    width: 10em;
+    z-index: 2;
+    border: 2px solid rgb(13, 37, 54);
+  }
+
+}
