--- a/app/page.module.css
+++ b/app/page.module.css
@@ -50,3 +50,31 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .imageContainer {
+    width: 100%;
+    height: auto;
+  }
+
+  .center {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .title {
+    font-size: 36px;
+  }
+
+  .cardContainer {
+    justify-content: center;
+  }
+}
+
+
+/* 
+
+768px
+576px
+360px */
