--- a/Styles/form.module.css
+++ b/Styles/form.module.css
@@ -72,6 +72,24 @@
     align-items: center;
   }
 
+  .alert{
+    margin-top: 40px;
+    text-align: center;
+    font-weight: bold;
+    border: 1px solid green;
+    background-color: lightgreen;
+    color: var(--black);
+    padding: 20px 10px;
+    border-radius: 4px;
+    align-items: center;
+  }
+
+  .textAlert{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+  }
 
   @media only screen and (max-width: 992px) {
     .container {
