--- a/Styles/about.module.css
+++ b/Styles/about.module.css
@@ -59,7 +59,7 @@
     margin:3px; 
   }
 
-  @media only screen and (max-width: 1200px) {
+  @media(max-width: 1200px) {
     .pdfContainer {
       display: flex;
       justify-content: space-between; 
@@ -83,7 +83,7 @@
 
   }
 
-  @media only screen and (max-width: 992px) {
+  @media (max-width: 992px) {
     
     .aboutTitle{
       text-align: center;
@@ -125,5 +125,66 @@
       width: 400px;
       height: 300px;
     }
+
+  }
+
+
+  @media (min-width: 300px) and (max-width: 650px) {
+
+    
+
+    .image {  
+      border-radius: 5px; 
+      margin-top: 20px;
+      margin-bottom: 30px;
+      flex-direction: column;
+      width: 300px;
+      height: 300px;
+   
+    }
+
+
+    .aboutTitle{
+      display: flex;
+      justify-content: space-between; 
+      align-items: center; 
+      font-size:14px;    
+      text-align: center;
+      margin-top: 30px; 
+      margin-left: 0px;
+      margin-right:0px;     
+      background-color: rgb(247, 247, 247);
+      padding-bottom: 40px;
+      padding-top: 100px;
+      padding-left:0px;
+    }
+
+
+    .aboutText{
+      margin-top: 20px; 
+      margin-bottom: 20px;
+      margin-left: 30px;
+      margin-right: 30px;
+      font-size:13px;
+      text-align: justify;
+      line-height: 1.5;
+      color: black;
+  
+    }
+
+    .title2{
+      font-size: 25px;
+      margin-top: 30px; 
+      margin-bottom: 30px;
+    }
+
+
+    .pdf{
+      width: 300px;
+      height: 200px;
+    }
+
+
+
 
   }
