--- a/Styles/card.module.css
+++ b/Styles/card.module.css
@@ -39,3 +39,11 @@
     margin: 0;
   }
   
+
+  @media only screen and (min-width: 300px) and (max-width: 852px) {
+    .overlay {
+      opacity: 1;
+    }
+  }
+   
+
