--- a/Styles/carousel.module.css
+++ b/Styles/carousel.module.css
@@ -63,10 +63,49 @@
   z-index: 1; 
 }
 
-@media only screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
   .descriptionOverlay {
     font-size:110px;  ;
   }
+
+}
+
+
+@media (min-width: 601px) and (max-width: 992px) {
+  .descriptionOverlay {
+    font-size:70px;  ;
+  }
+
+  .images{
+    width: 810px;
+    height:600px;
+  }
+
+}
+
+@media (min-width: 300px) and (max-width:601px) {
+
+  .descriptionOverlay {
+    font-size:32px;  
+  }
+
+  .images{
+    width: 450px;
+    height:250px;
+  }
+  
+  .customNextArrow,
+  .customPrevArrow {
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 5px;
+    padding: 2px;
+  }
+ 
+  .customNextArrow:hover,
+  .customPrevArrow:hover {
+  color: #990000 !important; 
+}
 
 }
