--- a/Styles/form.module.css
+++ b/Styles/form.module.css
@@ -91,7 +91,7 @@
     margin-top: 40px;
   }
 
-  @media only screen and (max-width: 992px) {
+  @media (max-width: 992px) {
     .container {
       display: flex;
       flex-wrap: wrap; 
@@ -114,3 +114,39 @@
       align-items: center;
     }
   }
+
+
+  
+@media (min-width: 300px) and (max-width: 700px){
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0ecec;;
+    color: rgb(7, 5, 38);
+    padding-top: 30px;
+    width: 80%;
+    border-radius: 3px;
+    padding-right: 40px;
+    padding-left: 40px;   
+    margin-bottom: 30px;
+  }
+ 
+  .input {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 5px;
+    border-width: 0.5;
+    border-radius: solid;
+    border: 2px solid #cecbcb;
+  }
+
+  .title {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: justify;
+  }
+  
+  
+}
