--- a/Styles/objectives.module.css
+++ b/Styles/objectives.module.css
@@ -10,7 +10,6 @@
   padding:50px;
   margin-left: 40px;
   
-  
 }
 
 .image {
@@ -107,7 +106,7 @@
 }
 
 
-@media only screen and (max-width: 992px) {
+@media(max-width: 992px) {
 
   .twoColumnsContainer {
     display: flex;
@@ -159,4 +158,113 @@
     border: 2px solid rgb(13, 37, 54);
   }
 
+}
+
+
+@media(max-width: 768px) {
+
+  .text {
+    font-size:17px;
+    text-align: justify;
+    margin-right: 30px;
+    margin-bottom: 10px;
+    line-height: 1.5;
+  }
+
+  .title{
+    text-align: center;
+    font-size:28px;
+    font-weight: bold;
+  }
+  
+  .title2{
+    color: #990000; 
+    text-align: center;
+    font-size:28px;  
+  }
+
+  .column{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0px;
+  }
+
+
+}
+
+
+@media (min-width: 601px) and (max-width: 992px) {
+  .twoColumnsContainer {
+    display: flex;
+    background-color: rgb(247, 247, 247);
+    flex-direction: column;
+  }
+
+  .column{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0px;
+    padding:10px;
+  }
+
+  .text {
+    font-size:17px;
+    text-align: justify;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+  }
+
+}
+
+
+@media (min-width: 300px) and (max-width: 600px){
+  .twoColumnsContainer {
+    display: flex;
+    background-color: rgb(247, 247, 247);
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .column{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0px !important;
+    padding:0px !important ;
+    margin-left: 20px;
+  }
+
+  .text {
+    font-size:13px;
+    text-align: justify;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 15px;
+    line-height: 1.5;
+  }
+
+  .image {
+    width: 200px;
+    height: 300px;
+    margin-right: 20px;
+    margin-bottom: 10px !important;
+  }
+
+  .title{
+    text-align: center;
+    font-size:20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 5px;
+  }
+  
+  .title2{
+    color: #990000; 
+    text-align: center;
+    font-size:20px;  
+    margin-bottom: 10px;
+  }
 }
