--- a/Styles/card.module.css
+++ b/Styles/card.module.css
@@ -42,7 +42,8 @@
 
   @media only screen and (min-width: 300px) and (max-width: 852px) {
     .overlay {
-      opacity: 1;
+      opacity: 0.8;
+      text-align: center;
     }
   }
    
