--- a/Styles/header.module.css
+++ b/Styles/header.module.css
@@ -65,9 +65,12 @@
   }
 
   .rightItems.active {
+    margin-top: 45px;
     display: flex;
     flex-direction: column;
     position: absolute;
+    padding-bottom: 20px;
+    font-size: 15px;
     top: 60px; 
     left: 0;
     width: 100%;
