--- a/Styles/form.module.css
+++ b/Styles/form.module.css
@@ -2,10 +2,10 @@
 .container {
     display: flex;
     flex-wrap: wrap; 
-    background-color: #f0ecec;;
+    background-color: #f0ecec;
     color: rgb(7, 5, 38);
     padding: 60px;
-    width: 45%;
+    width: 50%;
     border-radius: 3px;
   }
   
