--- a/Styles/servicesList.module.css
+++ b/Styles/servicesList.module.css
@@ -40,8 +40,9 @@
   font-size:22px;
   text-align: justify;
   margin-right: 30px;
+  margin-left: 30px;
   margin-bottom: 65px;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 
@@ -54,7 +55,7 @@
 
 .title2{
   text-align: justify;
-  margin-top: 35px;
+  margin-top: 65px;
   margin-bottom: 40px;
   font-size: 30px;
   margin-left: 50px;
@@ -113,7 +114,7 @@
   }
 }
 
-@media (min-width: 601px) and (max-width: 992px) {
+@media (min-width: 601px) and (max-width: 1200px) {
  
   .twoColumnsContainer{
     flex-direction: column;
