--- a/Styles/map.module.css
+++ b/Styles/map.module.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     height: 100%; 
     width: 100%;
-    position: absolute;
+    position: relative;
     }
   
 
@@ -23,9 +23,7 @@
         overflow: hidden;
         height: 100%; 
         width: 100%;
-        position: absolute;
+        position: relative;
         }
       
-      
-
     }
