--- a/Styles/map.module.css
+++ b/Styles/map.module.css
@@ -1,7 +1,8 @@
 .mapouter {
-    position: relative;
-    height: 500px; 
-    width: 100%;
+  height: 70vh; 
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   }
   
   .gmap_canvas {
@@ -9,4 +10,5 @@
     width: 100%;
     position: relative;
     }
+
   
