--- a/Styles/servicesList.module.css
+++ b/Styles/servicesList.module.css
@@ -52,14 +52,20 @@
   font-size: 35px;
 }
 
+.icon{
+  fill:#a80a0a;
+  margin-top: 20px;
+}
+
 
 .title2{
   text-align: justify;
-  margin-top: 65px;
+  margin-top: 15px;
   margin-bottom: 40px;
   font-size: 30px;
   margin-left: 50px;
-   color: #990000; 
+  color: black; 
+  font-weight: bolder;
 }
 
 
@@ -71,7 +77,7 @@
     margin-right: 40px;
     font-size: 25px;
     margin-left: 50px;
-     color: #990000; 
+    color:black; 
   }
 
   .text {
@@ -83,10 +89,30 @@
     margin-left: 20px;
   }
 
+  .svgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .twoColumnsContainer{
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+  }
+  
+  .image2{
+    width: 700px;
+  }
+
+
 }
 
 @media (max-width: 768px) {
-
+   
+  .image2{
+    width: 700px;
+  }
 
   .twoColumnsContainer{
     flex-direction: column;
@@ -97,8 +123,16 @@
   .twoColumnsContainer2{
     flex-direction:column-reverse;
     display: flex;
+    align-items: center !important;
+    justify-content: center;
+  }
+
+  .svgContainer {
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
+
 
   .column {
     padding:5px;
@@ -125,22 +159,38 @@
   .twoColumnsContainer2{
     flex-direction:column-reverse;
     display: flex;
-    align-items: center;
+    align-items:center;
   }
 
+  .svgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ 
+  .title2{
+    text-align: center;
+    margin-top: 35px;
+    margin-bottom: 20px;
+    color:black; 
+  }
 
+  .image2{
+    height: 900px;
+  }
 }
 
 @media (min-width: 300px) and (max-width: 600px){
 
   .image {
-    width: 300px;
-    height: 250px;
+    width: 100%;
+    height: 350px;
+    margin: 0px;
   }
 
   .image2{
-    width: 250px;
-    height: 350px;
+    width: 100%;
+    background-size:cover;
   }
 
 
@@ -156,7 +206,12 @@
     display: flex;
     align-items: center;
   }
-
+ 
+   .svgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   .title{
     font-size: 25px;
@@ -167,7 +222,7 @@
     margin-top: 35px;
     margin-bottom: 20px;
     font-size: 20px;
-    color: #990000; 
+    color:black; 
   }
 
   .text {
@@ -176,8 +231,5 @@
     margin-bottom: 35px;
     line-height: 1.5;
   }
-
-  
-
   
 }
