--- a/Styles/work.module.css
+++ b/Styles/work.module.css
@@ -11,7 +11,15 @@
     padding:20px;
   }
   
-  
+  .text {
+    font-size:22px;
+    text-align: justify;
+    margin-bottom: 45px;
+    padding-right: 13%;
+    padding-left: 13%;
+    line-height: 1.6;
+  }
+
   .title{
     margin-top: 170px;
     text-align: center;
