--- a/Styles/card.module.css
+++ b/Styles/card.module.css
@@ -30,6 +30,13 @@
     opacity: 0;
     transition: opacity 0.3s ease;
   }
+
+  .cardText{
+    word-wrap: break-word; 
+    text-align: center; 
+    max-width: 90%; 
+    line-height: 1.5; 
+  }
   
   .card:hover .overlay {
     opacity: 1;
@@ -45,6 +52,13 @@
     .overlay {
       opacity: 0.8;
       text-align: center;
+    }
+
+    .cardText{
+      word-wrap: break-word; 
+      text-align: center; 
+      max-width: 90%; 
+      line-height: 1.5; 
     }
 
 
@@ -83,6 +97,12 @@
       border-radius: 8px; 
     }
 
+    .cardText{
+      word-wrap: break-word; 
+      text-align: center; 
+      max-width: 90%; 
+      line-height: 1.5; 
+    }
   
   }
 
