--- a/Styles/servicesList.module.css
+++ b/Styles/servicesList.module.css
@@ -275,6 +275,13 @@
     margin: 0px;
   }
 
+  .image3 {
+    width: 100%;
+    height: 350px;
+    margin: 0px;
+  }
+
+
   .image2{
     width: 100%;
     background-size:cover;
