--- a/Styles/contact.module.css
+++ b/Styles/contact.module.css
@@ -53,13 +53,31 @@
   margin-bottom:40px;
 }
 
+.contactSection2 {
+  display: flex;
+  flex-direction: column; /* Alinea los hijos en columna */
+  align-items: flex-start; /* Opcional: Alinea los elementos al inicio */
+  gap: 0.5rem; /* Espaciado entre los elementos */
+}
+
 
 .iconBoxTitle2{
   font-size: medium;
   color: black;
   font-weight: 500; 
   display: inline-flex; 
-  margin-left: 30px;
+  margin-left: 40px;
+  align-items: center;
+  text-align: justify;
+  margin-bottom: 25px;
+}
+
+.iconBoxTitle5{
+  font-size: medium;
+  color: black;
+  font-weight: 500; 
+  display: inline-flex; 
+  margin-left: 45px;
   align-items: center;
   text-align: justify;
   margin-bottom: 25px;
