--- a/Styles/card.module.css
+++ b/Styles/card.module.css
@@ -103,6 +103,11 @@
       max-width: 90%; 
       line-height: 1.5; 
     }
+
+    .overlay {
+      opacity: 0.8;
+      text-align: center;
+    }
   
   }
 
