--- a/Styles/servicesList.module.css
+++ b/Styles/servicesList.module.css
@@ -7,16 +7,19 @@
 
 .twoColumnsContainer {
   display: flex;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .twoColumnsContainer2{
   display: flex;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .column {
   padding: 40px;
+}
 
+.expanded{
+  padding-top: 75px;
 }
 
 .image {
@@ -205,6 +208,7 @@
     flex-direction: column;
     display: flex;
     align-items: center;
+    margin-top: 20px;
   }
 
   .twoColumnsContainer2{
@@ -212,6 +216,7 @@
     display: flex;
     align-items: center !important;
     justify-content: center;
+    margin-top: 20px;
   }
 
   .svgContainer {
@@ -225,6 +230,11 @@
     padding:5px;
   
   }
+  
+  .expanded{
+    padding-top: 25px;
+  }
+
 
   .textColumn{
     padding:0px;
@@ -241,12 +251,18 @@
     flex-direction: column;
     display: flex;
     align-items: center;
+    margin-top: 20px;
+  }
+
+  .expanded{
+    padding-bottom: 25px;
   }
 
   .twoColumnsContainer2{
     flex-direction:column-reverse;
     display: flex;
     align-items:center;
+    margin-top: 20px;
   }
 
   .svgContainer {
@@ -293,18 +309,24 @@
     display: flex;
     align-items: center;
     text-align: center;
+    margin-top: 20px;
   }
 
   .twoColumnsContainer2{
     flex-direction:column-reverse;
     display: flex;
     align-items: center;
+    margin-top: 20px;
   }
  
    .svgContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  
+  .expanded{
+    padding-bottom: 25px;
   }
 
   .title{
