--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body, h1, h2, h3, p, margin, div {
+body, h1, h2, h3, p, div {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
