--- a/Styles/form.module.css
+++ b/Styles/form.module.css
@@ -17,6 +17,8 @@
   
   .title {
     width: 100%;
+    text-align: justify;
+    font-size: large;
     margin-bottom: 40px;
   }
   
@@ -28,10 +30,10 @@
   
   .input {
     width: 100%;
-    margin-bottom: 15px;
-    padding: 8px;
+    margin-bottom: 20px;
+    padding: 14px;
     border-width: 0.5;
-    border-radius: solid;
+    border-radius: 4px;
     border: 2px solid #cecbcb;
   }
   
@@ -48,16 +50,16 @@
     height: 35px;
     font-size: 1.2em;
     font-weight: 600;
-    padding: 4px;
+    padding: 14px;
     position: relative;
     text-decoration: none;
     border: 2px solid rgb(13, 37, 54);
     align-items: center;
-    border-radius: 2px;
+    border-radius: 4px;
     justify-content: center;
     height: 100%;
     transition: background 0.5s ease;
-    width: 40%;
+    width: 30%;
   }
 
   .button:hover {
