--- a/Styles/work.module.css
+++ b/Styles/work.module.css
@@ -12,10 +12,11 @@
 
 .text {
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
   margin-bottom: 50px;
+  margin-top: 40px;
   line-height: 1.6;
-  max-width: 900px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   color: #222;
@@ -48,12 +49,13 @@
 @media (max-width: 768px) {
   .title {
     margin-top: 100px;
-    font-size: 28px;
+    font-size: 24px;
   }
 
   .text {
     font-size: 18px;
     padding: 0 1rem;
+    text-align: justify;
   }
 }
 
@@ -61,6 +63,20 @@
   .row {
     flex-direction: column;
     align-items: center;
+  }
+
+  .title{
+    font-size: 17px;
+    margin-top: 120px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .text{
+    font-size: 13px;
+    text-align: justify;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .imageWrapper {
